[tool.poetry]
name = "vanilla-option-pricing"
version = "0.1.0"
description = "Stochastic model for vanilla option pricing"
authors = ["Emanuele Fabbiani <donlelef@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^6.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
