[tool.poetry]
name = "vanilla-option-pricing"
version = "0.1.0"
description = "Stochastic model for vanilla option pricing"
authors = ["Emanuele Fabbiani <donlelef@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.1.3"
numpy = "^1.19.2"
scipy = "^1.5.2"
py_vollib = "^1.0.1"
py-lets-be-rational = "^1.0.1"

[tool.poetry.dev-dependencies]
pytest = "^6.1"
pytest-cov = "^2.10.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
