[tool.poetry]
name = "vanilla-option-pricing"
version = "0.1.0"
description = "Stochastic model for vanilla option pricing"
authors = ["Emanuele Fabbiani <donlelef@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/donlelef/vanilla-option-pricing"
repository = "https://github.com/donlelef/vanilla-option-pricing"
documentation = "https://vanilla-option-pricing.readthedocs.io"
keywords = ["quantitative-finance", "option-pricing", "stochastic-models"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Education",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Topic :: Scientific/Engineering :: Mathematics",
]
include = [
    "LICENSE",
]

[tool.dephell.main]
from = { format = "poetry", path = "pyproject.toml" }
to = { format = "setuppy", path = "setup.py" }

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.1.3"
numpy = "^1.19.2"
scipy = "^1.5.2"
py_vollib = "^1.0.1"
py-lets-be-rational = "^1.0.1"

[tool.poetry.dev-dependencies]
pytest = "^6.1"
pytest-cov = "^2.10.1"
sphinx = "^3.2.1"
sphinx_rtd_theme = "^0.5.0"
dephell = "^0.8.3"
appdirs = "^1.4.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
